--- a/index.css
+++ b/index.css
@@ -1,7 +1,38 @@
-.logo{
-  float: left;
+body{
+  margin: 0%;
+  padding: 0%;
 }
-#navbar h1{
-  position: relative;
-  top: 25px;
+nav{
+  width: 100%;
+}
+nav ul{
+  padding: 0;
+  margin: 0 150px 0 150px;
+  list-style: none;
+  text-align: right;
+}
+nav li{
+
+  display: inline-block;
+
+}
+.logo img{
+  position: absolute;
+  margin-top: 10px;
+  margin-left: 10px;
+}
+nav a{
+  width: 100%;
+  display: block;
+  padding: 0px 30px;
+  font-weight: bold;
+  font-family: Poppins;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+}
+nav a:hover{
+  text-decoration-line: underline;
+  text-decoration-color: #d85a4f;
+  text-decoration-thickness: 8px;
 }
