--- a/index.css
+++ b/index.css
@@ -1,38 +1,82 @@
 body{
   margin: 0%;
   padding: 0%;
+  font-family: 'Poppins';
 }
 nav{
   width: 100%;
+  overflow: hidden;
+  background-color: aquamarine;
 }
 nav ul{
   padding: 0;
-  margin: 0 150px 0 150px;
+  margin: 50px 300px 20px 150px;
   list-style: none;
   text-align: right;
+
 }
 nav li{
-
   display: inline-block;
-
+}
+nav a{
+  width: 100%;
+  display: block;
+  padding: 0px 40px;
+  font-weight: bold;
+  font-size: 25px;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+}
+nav a:active{
+  text-decoration-line: underline;
+  text-decoration-color: #d87a4f;
+  text-decoration-thickness: 11px;
+  text-underline-offset: 12px;
 }
 .logo img{
   position: absolute;
   margin-top: 10px;
   margin-left: 10px;
 }
-nav a{
-  width: 100%;
-  display: block;
-  padding: 0px 30px;
-  font-weight: bold;
-  font-family: Poppins;
-  text-decoration: none;
-  text-align: center;
-  color: black;
+.logo h1{
+  font-size: 45px;
+  padding: 0;
+  margin: 30px 0 0 100px;
+  position: absolute;
+  font-family: fantasy;
 }
-nav a:hover{
-  text-decoration-line: underline;
-  text-decoration-color: #d85a4f;
-  text-decoration-thickness: 8px;
+footer .design{
+  float: right;
+  margin: 0 70px 0 0;
+}
+
+.fa-facebook {
+  background: black;
+  color: white;  
+
+}
+.footer .fa{ 
+  color: rgba(0, 0, 0, 0.863);
+  font-size: 27px;
+  padding: 5px 10px 0 10px;
+  margin-top: 5px;
+}
+.footer .social{
+  display: inline;
+}
+.footer #copyright{
+  float: left;
+  margin-top: 10px;
+}
+.footer #designed{
+  float: right;
+  margin-top: 10px;
+}
+.footer span{
+  font-size: 25px;
+}
+.footer{
+  padding: 20px 70px 20px 20px;
+  text-align: center;
 }
