--- a/index.css
+++ b/index.css
@@ -1,13 +1,12 @@
 body {
   margin: 0%;
-  padding: 0%;
+  padding: 20px;
   font-family: 'Poppins';
 }
 
 nav {
   width: 100%;
   overflow: hidden;
-  background-color: aquamarine;
 }
 
 nav ul {
@@ -59,9 +58,9 @@ footer .design {
   margin: 0 70px 0 0;
 }
 
-.fa-facebook {
-  background: black;
-  color: white;
+.fab {
+  color: rgb(0, 0, 0, 0.863);
+  font-size: 27px;
 
 }
 
@@ -95,48 +94,60 @@ footer .design {
   text-align: center;
 }
 
-.row::after{
+.row::after {
   content: "";
   display: table;
   clear: both;
-  padding: 30px;
 }
 
 .column-left {
   float: left;
-  width: 45%;
+  width: 40%;
   padding: 20px;
+  padding-top: 190px;
+  font-size: 24px;
 }
 
 .column-right {
   float: left;
-  width: 55%;
-  padding: 20px;
+  width: 60%;
+  padding-right: 20px;  
 }
 
 #home {
-  padding: 50px;
+  padding: 60px;
 }
 
 h1 .rain {
-  font-size: 50px;
+  font-size: 60px;
   font-weight: 900;
 }
 
 .button {
+  margin-top: 150px;
+  margin-left: 53px;
   border: none;
   color: white;
-  padding:14px 28px;
-  font-size: 16px;
+  padding: 14px 28px;
+  font-size: 25px;
   cursor: pointer;
-  background-color: #04AA6D;
-
+  background-color: #f6b400;
+  border-radius: 30px 26px 0px 30px;
 }
-#cook{
+
+#cook {
+  margin-top: 30px;
   font-size: 25px;
   font-weight: 900;
   color: rgb(131, 131, 131);
 }
+
 * {
   box-sizing: border-box;
+}
+
+.imghome{
+  height: 900px;
+  width: auto;
+  margin-left: 100px;
 }
