--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0%;
-  padding: 20px;
+  padding: 0px;
   font-family: 'Poppins';
 }
 
@@ -42,13 +42,13 @@ nav a:active {
 .logo img {
   position: absolute;
   margin-top: 10px;
-  margin-left: 10px;
+  margin-left: 40px;
 }
 
 .logo h1 {
   font-size: 45px;
   padding: 0;
-  margin: 30px 0 0 100px;
+  margin: 30px 0 0 130px;
   position: absolute;
   font-family: fantasy;
 }
@@ -156,21 +156,34 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+.services{
+  text-align: center;
+  padding: 200px 0px 150px 10px;
+  align-content: center;
+  background-color: whitesmoke;
+}
 
 .services .column {
   float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
+  width: 28%;
+  padding: 70px 0 50px 0px;
   text-align: center;
+  border: 1px solid black;
+  border-radius: 18px;
+  
 }
-
+.edge{
+  margin: 40px 12px;
+}
+.middle{
+  margin: 20px 100px;
+}
 .services .container {
-  padding: 0 16px;
+  padding: 0 16px 30px 20px;
   text-align: center;
 }
 
-.container::after, .services::after {
+.container::after{
   content: "";
   clear: both;
   display: table;
@@ -183,4 +196,9 @@ html {
 .bell, .truck, .food{
   height: auto;
   width: 100px;
+}
+.services::after{
+  clear: both;
+  content: "";
+  display: table;
 }
