--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ footer .design {
 #home .column-right {
   float: left;
   width: 60%;
-  padding-right: 20px;  
+  padding-right: 20px;
 }
 
 #home {
@@ -141,22 +141,28 @@ h1 .rain {
   font-weight: 900;
   color: rgb(131, 131, 131);
 }
-.imghome{
+
+.imghome {
   height: 900px;
   width: auto;
   margin-left: 100px;
 }
-#home{
+
+#home {
   display: table;
 }
+
 html {
   box-sizing: border-box;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
-.services{
+
+.services {
   text-align: center;
   padding: 200px 0px 150px 10px;
   align-content: center;
@@ -170,20 +176,24 @@ html {
   text-align: center;
   border: 1px solid black;
   border-radius: 18px;
-  
+
 }
-.edge{
+
+.edge {
   margin: 40px 12px;
 }
-.middle{
+
+.middle {
   margin: 20px 100px;
+  padding: 30px;
 }
+
 .services .container {
   padding: 0 16px 30px 20px;
   text-align: center;
 }
 
-.container::after{
+.container::after {
   content: "";
   clear: both;
   display: table;
@@ -193,12 +203,70 @@ html {
   color: grey;
 }
 
-.bell, .truck, .food{
+.bell,
+.truck,
+.food {
   height: auto;
   width: 100px;
 }
-.services::after{
+
+.services::after {
   clear: both;
   content: "";
   display: table;
+}
+
+.offers .column {
+  float: left;
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+  text-align: center;
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.568);
+  border-radius: 80px;
+  margin: 5px;
+}
+
+.container {
+  padding: 0 50px;
+}
+
+.container::after,
+.offers::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+#ourmenu {
+  text-decoration-line: underline;
+  text-decoration-color: #ca7403e5;
+  text-decoration-thickness: 15px;
+  text-underline-offset: 5px;
+  text-align: center;
+  display: block;
+  margin-top: 150px;
+  font-size: 18px;
+  font-weight: bolder;
+  margin-bottom: 50px;
+}
+.our{
+  display: inline;
+}
+.menu{
+  display: inline;
+  color: #f6b400;
+}
+.cart{
+  background-color: #E1EBE6;
+  float: right;
+  padding: 30px 50px;
+  border-radius: 18px;
+  margin-bottom: 30px;
+  font-size: 30px;
+}
+.img{
+  width: 100%;
 }
