--- a/index.css
+++ b/index.css
@@ -230,7 +230,7 @@ html {
 .card {
   box-shadow: 0 4px 7px 0 rgba(0, 0, 0, 0.568);
   border-radius: 80px;
-  margin: 40px 40px 5px 40px;
+  margin: 40px 35px 5px 40px;
 }
 
 .container {
@@ -338,7 +338,6 @@ html {
   display: block;
   font-size: 53px;
   font-weight: bolder;
-  vertical-align: middle;
 }
 .pic{
   float: right;
@@ -359,4 +358,25 @@ html {
 .column-2{
   float: left;
   width: 35%;
+}
+
+input[type=text], input[type=submit] {
+  width: 16%;
+  padding: 12px;
+  margin: 8px 0;
+  display: inline;
+  border: 1px solid gray;
+}
+  input[type=text] {
+  border-radius: 8px 0 0 8px;
+  float:left ;
+
+}
+input[type=submit] {
+  background-color: #f6b400;
+  color: white;
+  border: none;
+  font-size: 15px;
+  width: fit-content;
+  float: right;
 }
