--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ footer .design {
   padding-top: 190px;
   font-size: 24px;
 
-  
+
 }
 
 #home .column-right {
@@ -118,7 +118,7 @@ footer .design {
 
 #home {
   padding: 60px;
-  
+
 }
 
 h1 .rain {
@@ -243,6 +243,7 @@ html {
   clear: both;
   display: table;
 }
+
 #ourmenu {
   text-decoration-line: underline;
   text-decoration-color: #ca7403e5;
@@ -255,14 +256,17 @@ html {
   font-weight: bolder;
   margin-bottom: 50px;
 }
-.our{
+
+.our {
   display: inline;
 }
-.menu{
+
+.menu {
   display: inline;
   color: #f6b400;
 }
-.cart{
+
+.cart {
   background-color: #E1EBE6;
   float: right;
   padding: 30px 50px;
@@ -270,14 +274,17 @@ html {
   margin-bottom: 30px;
   font-size: 30px;
 }
-.img{
+
+.img {
   width: 100%;
 }
-.cash{
+
+.cash {
   float: left;
   font-weight: bolder;
   font-size: 26px;
 }
+
 .container2 {
   padding: 150px 0;
   background-color: whitesmoke;
@@ -300,83 +307,120 @@ html {
   width: 60%;
   padding: 20px;
 }
-.taste{
+
+.taste {
   padding-left: 80px;
 
 }
-.deckertext{
+
+.deckertext {
   padding-left: 70px;
   font-size: 50px;
   font-weight: bolder;
   color: #f6b400;
 }
-.doubletext{
+
+.doubletext {
   padding-left: 70px;
   margin-top: 70px;
   font-size: 50px;
   font-weight: bolder;
 }
-.spanname{
+
+.spanname {
   display: block;
 }
-.download{
+
+.download {
   display: inline-block;
   padding-top: 100px;
   font-weight: bolder;
 }
-.column-lef{
+
+.column-lef {
   float: left;
   width: auto;
 }
-.column-righ{
+
+.column-righ {
   float: right;
   width: 40%;
 }
-.down{
+
+.down {
   background-color: #f6b400;
   padding: 200px 40px 120px 60px;
   display: block;
   font-size: 53px;
   font-weight: bolder;
 }
-.pic{
+
+.pic {
   float: right;
   width: 160%;
 }
-.site{
+
+.site {
   padding: 30px;
   background-color: whitesmoke;
 }
-.logo1{
+
+.logo1 {
   float: left;
   padding-top: 100px;
+  position: relative;
 }
-.column-1{
+
+.column-1 {
   float: left;
   width: 30%;
 }
-.column-2{
+
+.column-2 {
   float: left;
   width: 35%;
+  font-size: 16px;
+}
+.column-3{
+  padding: 30px 10px 30px 100px;
+  font-size: 22px;
 }
 
-input[type=text], input[type=submit] {
+input[type=text],
+input[type=submit] {
   width: 16%;
   padding: 12px;
   margin: 8px 0;
   display: inline;
   border: 1px solid gray;
 }
-  input[type=text] {
+
+input[type=text] {
   border-radius: 8px 0 0 8px;
-  float:left ;
+  float: left;
+  padding: 12px 50px 12px 10px;
 
 }
+
 input[type=submit] {
   background-color: #f6b400;
   color: white;
   border: none;
   font-size: 15px;
-  width: fit-content;
-  float: right;
+  width: 10%;
+}
+
+.siteul {
+  list-style: none;
+}
+
+.column-2 .p {
+  font-weight: bold;
+}
+
+.logo1 h1 {
+  font-size: 45px;
+  padding: 0;
+  margin: 0px 0 0 70px;
+  font-family: fantasy;
 }
