--- a/index.css
+++ b/index.css
@@ -116,13 +116,16 @@ footer .design {
 
 #home .column-right {
   float: left;
+
+  display: block;
   width: 58%;
-  padding-right: 20px;
+  padding-right: 0px;
+  clip-path: polygon(40% 0, 100% 0%, 100% 100%, 0% 100%);
+  background-color: #f6b400;
 }
 
 #home {
   padding: 60px;
-
 }
 
 h1 .rain {
@@ -166,7 +169,7 @@ html {
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 .services {
